--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -78,7 +78,7 @@
       <div class="neon-card">
         <div class="flex justify-between items-start">
           <div>
-            <h3 class="text-2xl font-mono text-secondary-neon">{{ job.role }} <a class="text-blue-300"
+            <h3 class="text-2xl font-mono text-secondary-neon">{{ job.role }} <a class="text-blue-300 text-xl"
                 [href]="job.companyUrl" target="_blank">(View)</a></h3>
             <p class="text-primary-neon text-lg">{{ job.company }}</p>
           </div>
